--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
             <button class="clear" onclick="clearDisplay()">C</button>
             <button onclick="backspace()">←</button>
             <button onclick="appendValue('%')">%</button>
-            <button onclick="appendValue('/')">/</button>
+            <button onclick="appendValue('÷')">÷</button>
             <button onclick="appendValue('7')">7</button>
             <button onclick="appendValue('8')">8</button>
             <button onclick="appendValue('9')">9</button>
-            <button onclick="appendValue('*')">*</button>
+            <button onclick="appendValue('x')">x</button>
             <button onclick="appendValue('4')">4</button>
             <button onclick="appendValue('5')">5</button>
             <button onclick="appendValue('6')">6</button>
